Fixed overflowing column problem on resume2 by adding word-break to p tags

--- a/client/src/index.less
+++ b/client/src/index.less
@@ -602,6 +602,9 @@ img {
 	.row {
 		flex-wrap: unset;
 	}
+	p {
+		word-break: break-word;
+	}
 }
 .template3 {
 	border: 1px solid black;
